# matchbox

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
src/: core.rs  input.rs  main.rs  myers.rs  output.rs  parse.rs  parser.lalrpop  read.rs  standard_library.mb  surface.rs  test.rs  ui.rs  util.rs  visit.rs
src/core/: library.rs  matcher.rs  rec.rs
src/core/matcher/: read_matcher.rs
src/input/: bam.rs  dsv.rs  fasta.rs  fastq.rs  sam.rs
src/output/: average.rs  counts.rs  file.rs  stdout.rs
src/output/file/: bam.rs  fasta.rs  fastq.rs  sam.rs  txt.rs
src/read/: bam.rs  dsv.rs  fasta.rs  fastq.rs  sam.rs
