[package]
name = "matchbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = "*"
bio = "*"
rayon = "*"
itertools = "*"
csv = "*"
peg = "*"
codespan-reporting = "*"
clap = { version = "*", features = ["derive"] }
clap_builder = "*"
codespan = "*"
flate2 = { version = "*", features = ["zlib-ng"] }
noodles = { version = "0.101.0", features = ["sam", "bam", "bgzf"] }
noodles-util = { version = "0.70.0", features = ["alignment"] }
indicatif = "*"
color-eyre = "*"
ratatui = "*"
crossterm = "*"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }

[profile.release]
debug = true
